--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -74,3 +74,74 @@
  	cursor:pointer;
  	display:inline-block;
  }
+ 
+ .feedback-failure{
+    background: #F0F0F0;
+    color: red;
+    list-style-type: none;
+    text-align:left;
+}
+
+.feedback-success{
+    background: #F0F0F0;
+}
+
+.feedbackBox{
+    width:300px;
+    height:500px;
+}
+
+.modal-header{
+    background: #303030;
+    font-size: medium;
+    height: 50px;
+    text-align:center;
+    width:500px;
+    padding:0px;
+    margin:0px;
+    
+}
+
+.modal-header-text{
+    text-align:center;
+    color:#6f42c1;
+    margin-top:10px;
+    width:500px;
+    
+}
+
+.feedbackBox{
+    width:200px;
+    height:350px;
+}
+
+.modal-body{
+    font-size: large;
+    height:200px;
+    text-align: center;
+}
+
+.modal-body-text{
+    vertical-align: middle;
+    margin-top: 60px;
+    font-weight: bold;
+}
+
+ .modal-header{
+     background:#181414;
+     color:#6A5ACD;
+     font-weight:bold;
+ }
+
+.modal-title{
+	margin-left:20px;
+}
+
+.filter-close-box{
+     padding:10px;
+     cursor:pointer;
+     font-size:20px;
+     font-weight: bold;
+    text-align: right;
+        
+}
