--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -145,3 +145,65 @@
     text-align: right;
         
 }
+
+.listing-table{
+	margin-top:20px;
+	vertical-align:middle;
+}
+
+.listing-tab-col{
+    border:1px black solid;
+    background-color: #ffffff;
+    font-size: x-small;
+    text-align: center;
+    padding: 5px;
+}
+
+.bg-tab-hdr{
+	border:1px black solid;
+	background: #6c757d;
+    color: #ffffff;
+    font-size: x-small;
+    white-space:nowrap;
+    padding:5px;
+    margin:5px;
+    text-align:center;
+    padding-left:5px;
+    padding-right:5px;
+    min-width:50px;
+}
+
+.action-buttons{
+	text-align:right;
+	margin-right:40px;
+}
+
+.btnRight{
+	margin-top:20px;
+    margin-bottom:20px;
+    margin-right:20px;
+    min-width:100px;
+}
+
+ .pagination-options{
+ 	margin-top:20px;
+    margin-bottom:10px;
+    text-align:right;
+    margin-right:95px;
+ }
+ 
+ .listing-nav{
+     cursor:pointer;
+     color:blue;
+     font-weight:bold;
+     margin-left:20px;
+     margin-right:20px;
+ }
+
+ .listing-nav-disabled{
+     color:grey;
+     font-weight:bold;
+     margin-left:20px;
+     margin-right:20px;
+ }
+ 
