--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -185,25 +185,31 @@
     min-width:100px;
 }
 
- .pagination-options{
- 	margin-top:20px;
-    margin-bottom:10px;
-    text-align:right;
-    margin-right:95px;
- }
+.pagination-options{
+	margin-top:20px;
+	margin-bottom:10px;
+	text-align:right;
+	margin-right:95px;
+}
  
- .listing-nav{
-     cursor:pointer;
-     color:blue;
-     font-weight:bold;
-     margin-left:20px;
-     margin-right:20px;
- }
+.listing-nav{
+	cursor:pointer;
+	color:blue;
+	font-weight:bold;
+	margin-left:20px;
+	margin-right:20px;
+}
 
- .listing-nav-disabled{
-     color:grey;
-     font-weight:bold;
-     margin-left:20px;
-     margin-right:20px;
- }
+.listing-nav-disabled{
+	color:grey;
+    font-weight:bold;
+    margin-left:20px;
+    margin-right:20px;
+}
+ 
+.listing-tab-row:hover{
+	cursor:pointer;
+}
+
+
  
