--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -41,11 +41,11 @@
 				      	</thead>
 				      	<tbody>
 				      		<!-- Table row -->
-				      		<tr *ngFor="let listing of listings">
-				      			<td class="listing-tab-col">{{listing.created}}</td>
+				      		<tr class="listing-tab-row" *ngFor="let listing of listings" (click)="showListingDetails(listing)">
+				      			<td class="listing-tab-col">{{listing.created | date:'yyyy-MM-dd hh:mm'}}</td>
 				      			<td class="listing-tab-col">{{listing.title}}</td>
-				                <td class="listing-tab-col">{{listing.type}}</td>
-				                <td class="listing-tab-col">{{listing.country}}</td>
+				                <td class="listing-tab-col">{{getContractType(listing.type)}}</td>
+				                <td class="listing-tab-col">{{getCountryCode(listing.country)}}</td>
 				                <td class="listing-tab-col">{{listing.views}}</td>
 				      		</tr>	
 				      	</tbody>
@@ -54,25 +54,29 @@
 				
 			</div>
 			
-			<div  *ngSwitchCase="'add'">
-				
-				
-				<!-- Action buttons -->
-				<div class="action-buttons">
-					<button (click)="showList()" class="btn btn-secondary btn-listing">Show Listings</button>
-					<button (click)="publishListing()" class="btn btn-secondary btn-listing">Publish</button>
-				</div>
-				
-				
-			</div>
-			
 		</div>
 		
 		<div class="center">
 	   		<div [ngSwitch]="activeView">
+	   		
+	   			<div  *ngSwitchCase="'show'">
+	   			
+	   				<!-- Action buttons -->
+					<div class="action-buttons">
+						<button (click)="showList()" class="btn btn-secondary btn-listing">Back</button>
+						<button (click)="showEditListing()" class="btn btn-secondary btn-listing">Edit</button>
+					</div>
+					SHOW LISTING HERE
+				</div>
 				
 				<!-- List Listings -->
-				<div  *ngSwitchCase="'add'">
+				<div  *ngSwitchCase="['add', 'edit'].includes(activeView) ? activeView : !activeView">
+				
+					<!-- Action buttons -->
+					<div class="action-buttons">
+						<button (click)="showPreviousShowOption()" class="btn btn-secondary btn-listing">Back</button>
+						<button (click)="publishListing()" class="btn btn-secondary btn-listing">Publish</button>
+					</div>
 				
 					<form [formGroup]="newListingFormBean">
 					
@@ -234,5 +238,7 @@
 				</div>
 			</div>			
 		</div>
+		
+
 	
 </div>
