Listing edit field population and defaults for add new listing

--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -81,7 +81,9 @@
 						</div>
 						
 						<div class="listing-view-div">
-							<p>{{selectedListing.description}}</p>
+							<!--  <p>-->
+							<pre style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">{{selectedListing.description}}</pre>
+							<!-- </p> -->
 						</div>
 						
 						<h2 class="listing-view-title">Requirements</h2>
