--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -1,64 +1,60 @@
-<div class=".container m-2" >
+<div class=".container m-2">
+	<div>
 
-	<ul class="nav nav-tabs">
-	  <li class="nav-item">
-	    <span class="nav-link statsChartTab" (click)="switchTab('downloads')">Downloads</span>
-	  </li>
-	  <li class="nav-item statsChartTab">
-	    <span class="nav-link" (click)="switchTab('availability')">Availability</span>
-	  </li>
-	</ul>
-
-	
-	<!-- Downloads -->
-	
-	<div *ngIf="showStatsDownloads">
-		<table class="table stats-table">
-			<tr>
-				<td>
-					<div class="chart-wrapper"  style="width:600px">
-						<h3>Daily downloads</h3>
-		   	 			<canvas baseChart 
-		        				[datasets]="lineChartData" 
-		        				[labels]="lineChartLabels" 
-		        				[options]="lineChartOptions"
-		        				[colors]="lineChartColors" 
-		        				[legend]="lineChartLegend" 
-		        				[chartType]="lineChartType" 
-		       			 		[plugins]="lineChartPlugins">
-		   				 </canvas>
-					</div>
-				</td>
-				<td>
-					<div class="chart-wrapper"  style="width:600px;">
-						<h3>Recruiter downloads</h3>
-						<button (click)="switchChartData('total')">Total</button>
-						<button (click)="switchChartData('month')">Monthly</button>
-						<button (click)="switchChartData('week')">Weekly</button>
-						<button (click)="switchChartData('day')">Daily</button>
-		    			<canvas baseChart 
-		        				[datasets]="recruiterDownloadsChartData" 
-		        				[labels]="recruiterDownloadsChartLabels" 
-		        				[options]="recruiterDownloadsChartOptions"
-		        				[colors]="recruiterDownloadsChartColors" 
-		        				[legend]="recruiterDownloadsChartLegend" 
-		        				[chartType]="recruiterDownloadsChartType" 
-		        				[plugins]="recruiterDownloadsChartPlugins">
-		    			</canvas>
-					</div>
-				</td>
-			</tr>		
-						
-		</table>
-
-	</div>
-
-	<!-- Availability -->
-	<div *ngIf="showStatsAvailability">
-		<table class="table stats-table">
-			<tr>
-				<td>
-					<div class="chart-wrapper"  style="width:600px;">
+        			<!-- Action buttons -->
+			<div class="action-buttons">
+				<button class="btn btn-secondary btnRight" (click)="fetchStatus()" download>Refresh</button>
+			</div>
+			
+				<ul class="nav nav-tabs">
+				  <li class="nav-item">
+				    <span class="nav-link statsChartTab" (click)="switchTab('downloads')">Downloads</span>
+				  </li>
+				  <li class="nav-item statsChartTab">
+				    <span class="nav-link" (click)="switchTab('availability')">Availability</span>
+				  </li>
+				</ul>
+			
+				
+				<!-- Downloads -->
+				
+				<div *ngIf="showStatsDownloads">
+					
+								<div class="chart-wrapper">
+									<h3>Daily downloads</h3>
+					   	 			<canvas baseChart 
+					        				[datasets]="lineChartData" 
+					        				[labels]="lineChartLabels" 
+					        				[options]="lineChartOptions"
+					        				[colors]="lineChartColors" 
+					        				[legend]="lineChartLegend" 
+					        				[chartType]="lineChartType" 
+					       			 		[plugins]="lineChartPlugins">
+					   				 </canvas>
+								</div>
+							
+								<div class="chart-wrapper">
+									<h3>Recruiter downloads</h3>
+									<button (click)="switchChartData('week')">This week</button>
+									<button (click)="switchChartData('day')">Today</button>
+					    			<canvas baseChart 
+					        				[datasets]="recruiterDownloadsChartData" 
+					        				[labels]="recruiterDownloadsChartLabels" 
+					        				[options]="recruiterDownloadsChartOptions"
+					        				[colors]="recruiterDownloadsChartColors" 
+					        				[legend]="recruiterDownloadsChartLegend" 
+					        				[chartType]="recruiterDownloadsChartType" 
+					        				[plugins]="recruiterDownloadsChartPlugins">
+					    			</canvas>
+								</div>
+							
+			
+				</div>
+			
+				<!-- Availability -->
+				<div *ngIf="showStatsAvailability">
+					
+					<div class="chart-wrapper">
 						<h5>Totals:</h5>
 						<table>
 							<tr>
@@ -67,27 +63,20 @@
 							</tr>
 						</table>
 					</div>
-				</td>
-		
-				<td>
-					<div class="chart-wrapper"  style="width:600px;">
+					<div class="chart-wrapper">
 						<h5>Available by Function</h5>
-   						<canvas baseChart 
-       						[datasets]="functionChartData" 
-       						[labels]="functionChartLabels" 
-       						[options]="functionChartOptions"
-       						[colors]="functionChartColors" 
-       						[legend]="functionChartLegend" 
-       						[chartType]="functionChartType" 
-       						[plugins]="functionChartPlugins">
-    					</canvas>
+	  						<canvas baseChart 
+	      						[datasets]="functionChartData" 
+	      						[labels]="functionChartLabels" 
+	      						[options]="functionChartOptions"
+	      						[colors]="functionChartColors" 
+	      						[legend]="functionChartLegend" 
+	      						[chartType]="functionChartType" 
+	      						[plugins]="functionChartPlugins">
+	   					</canvas>
 					</div>
-					
-				</td>
-				
-			</tr>		
-				
-		</table>
-	</div>	
-      
-</div>
+							
+				</div>	
+			      
+			</div>
+        </div>
