FE style changes

--- a/recruit-gui/src/app/create-candidate/create-candidate.component.css
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.css
@@ -79,3 +79,19 @@
     margin:0 auto;
     margin-top:25px;
 }
+
+.tb-lbl{
+	padding-right:20px;
+}
+
+.tb-lbl-checkbox{
+	padding-right:40px;
+}
+
+.inpt-tab-std{
+	max-width:250px;
+}
+
+.div-spacing{
+	margin-top:40px;
+}
