--- a/recruit-gui/src/app/login-user/login-user.component.css
+++ b/recruit-gui/src/app/login-user/login-user.component.css
@@ -60,17 +60,12 @@ input{
      cursor:pointer;
      font-size:20px;
      font-weight: bold;
-    text-align: right;  
+    	text-align: right;  
 }
 
-.centerdiv{
-    margin: 0 auto;
-    padding-left:10px;
-    padding-right:10px;
-    width:90%;
-}
-
-.center-table{
-    margin:0 auto;
-    margin-top:200px;
+.center {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  padding-top:50px;
 }
