--- a/recruit-gui/src/app/login-user/login-user.component.css
+++ b/recruit-gui/src/app/login-user/login-user.component.css
@@ -63,6 +63,23 @@ input{
     	text-align: right;  
 }
 
+.wholepagerow {
+    margin: 0 auto;
+    width: 400px;
+}
+
+.centerdiv{
+    margin: 0 auto;
+    padding-left:10px;
+    padding-right:10px;
+    width:90%;
+}
+
+.center-table{
+    margin:0 auto;
+    margin-top:50px;
+}
+
 .center {
   margin: auto;
   width: 50%;
