candidate and login formatting

--- a/recruit-gui/src/app/login-user/login-user.component.html
+++ b/recruit-gui/src/app/login-user/login-user.component.html
@@ -6,11 +6,11 @@
 					<table>
 						<tr>
 							<td><span style="padding-right:20px;">Username</span></td>
-							<td><input type="text" formControlName="username"/></td>
+							<td><input class="inpt-tab-std" type="text" formControlName="username"/></td>
 						</tr>
 						<tr>
 							<td>Password</td>
-							<td><input style="margin-right:20px;" type="password" formControlName="password"/></td>
+							<td><input class="inpt-tab-std" style="margin-right:20px;" type="password" formControlName="password"/></td>
 						</tr>
 						<tr>
 							<td>&nbsp;</td>
