--- a/recruit-gui/src/app/new-candidate/new-candidate.component.css
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.css
@@ -81,3 +81,20 @@
     text-align: right;
         
 }
+
+.wholepagerow {
+    margin: 0 auto;
+    width: 1040px;
+}
+
+.centerdiv{
+    margin: 0 auto;
+    padding-left:10px;
+    padding-right:10px;
+    width:90%;
+}
+
+.center-table{
+    margin:0 auto;
+    margin-top:50px;
+}
