--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -1,11 +1,13 @@
 <div>
+    <div class="centerdiv">
+        <div class="center-table">
 	<form [formGroup]="formBean">
 
 		<div class="wholepage">
 			<div class="centerdiv" >
 				
 				<div class="row wholepagerow">
-					<div class="col halpagecol">
+					<div class="col halpagecolX">
 
 						<div class="row rowadduser">
 							<div class="col bg-tab-hdr">User</div>
@@ -163,6 +165,8 @@
 	</form>
 
 </div>
+</div>
+</div>
 
 <ng-template #feedbackBox let-modal>
 
@@ -218,7 +222,7 @@
 			
 	</div> 
 	</div>
-	   
+	  
 	
 </ng-template>
      
