--- a/recruit-gui/src/app/login-user/login-user.component.css
+++ b/recruit-gui/src/app/login-user/login-user.component.css
@@ -16,7 +16,9 @@ input{
 }
 
 .loginbutton{
-    width:300px;
+	margin-top:20px;
+    float:right;
+    margin-right:20px;
 }
 
 .modal-header{
@@ -85,4 +87,8 @@ input{
   width: 50%;
   padding: 10px;
   padding-top:50px;
+}
+
+.inpt-tab-std{
+	max-width:250px;
 }
