--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -30,6 +30,9 @@
 		<li class="li-arenella-nav" *ngIf="!isAuthenticated()">
            <a class="dropdown-item candidate-signup" routerLink="/create-candidate">Candidate Signup</a>
         </li>
+		<li class="li-arenella-nav" *ngIf="!isAuthenticated()">
+           <a class="dropdown-item recruiter-signup" routerLink="/recruiter-signup">Recruiter Signup</a>
+        </li>
 		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin()">
            <a class="dropdown-item recruiter-account" routerLink="/recruiter-account">Manage Account</a>
         </li>
