--- a/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
+++ b/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
@@ -1,6 +1,6 @@
 .table-left-hdr {
 	font-weight: bold;
-	background:grey;
+	background: #6c757d;
 	color:white;
 }
 
@@ -15,5 +15,57 @@
 }
 
 .container-div{
-	margin:120px;
+	margin:20px;
+}
+
+.tabNav{
+	cursor:pointer;
+}
+
+.container-div-high{
+	margin-top:30px;
+}
+
+.bg-tab-hdr{
+	border:1px black solid;
+	background: #6c757d;
+    color: #ffffff;
+    font-size: x-small;
+    white-space:nowrap;
+    padding:5px;
+    margin:5px;
+    text-align:center;
+    padding-left:5px;
+    padding-right:5px;
+    min-width:50px;
+}
+
+.subscription-tab-col{
+    border:1px black solid;
+    background-color: #ffffff;
+    font-size: x-small;
+    text-align: center;
+    padding: 5px;
+}
+
+.subscriptions-options-div{
+	margin-top:50px;
+	margin-bottom:20px;
+}
+
+.subscription-table-btn{
+	text-align:center;
+}
+
+.btn-subscription{
+ 	margin-top:20px;
+	margin-right:10px;
+    min-width:100px;
+}
+
+.no-sub-warn{
+	color:red;
+	text-align:center;
+	margin-top:20px;
+	margin-bottom:50px;
 }
