--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -2,29 +2,48 @@
     <div class="centerdiv">
         <div class="center-table">
             <div class="row">
+            	 <div class="col">
+            	 	<h3>What is Arenella-ICT</h3>
+            	 	<p>
+            	 	Arenella is a platorm for recruiters to connect with available IT candidates. Via Arenella recruiters can search on and download the CVs and contact details of available 
+            	 	IT candidates. Recruiters using Arenella can also place job adverts to connect with candidates not currently in the system
+            	 	</p>
+            	 	<h3>How many IT candidates are available</h3>
+            	 	<p>At present there are {{totalNumberActiveCandidates}} IT candidates available in the CV database.</p>
+            	 	<h3>Our background in IT</h3>
+            	 	<p>
+            	 	Having spent over 22 years working in the IT sector we have extensive knowledge of the IT markets in which we work. Since 2021 Arenella has turned its 
+            	 	attention to sourcing of candidates for the IT recruitment sector.
+            	 	</p>
+            	 </div>
                 <div class="col">
-                    <h2> {{totalNumberActiveCandidates}} ICT Candidates available</h2>
+                
+                    <h2>  IT candidate CV database</h2>
                     <p>
-                    Are you a recruiter looking for ICT candidates in the Netherlands, Belgium or the UK? Arenella ICT recruitment
-                    offers you access to a large number of ICT candidates actively looking for a new role. We have both Freelancers 
-                    and Permanent candidates available.
+                    	The IT candidate CV database is one of the main features of the site. We actively search for available IT candidates and with their permission add their CV and profile into the 
+                    	system. As a recruiter you can filter on your exact requirements and download the CVs of suitable candidates.
                     </p>
-                    <p>
-                        {{totalNumberActiveCandidates}} ICT candidates available across the Netherlands, Belgium and 
-                        UK markets
-                    </p>
+                    <div>
+                    	We source both contract and permanent IT candidates for the following locations
+                    	<ul>
+                    		<li>The Netherlands</li>
+                    		<li>Belgium</li>
+                    		<li>The United Kingdom</li>
+                    		<li>The republic of Ireleand</li>
+                    	</ul>
+                    </div>
                     <p>
                         All candidates are local, hand picked and either native or have valid work visas.
                     </p>
                     <p>
                         Our ICT candidates speak diverse languages, including Dutch, English and French
                     </p>
-                    <p>
-                        Both freelance and permanent candidates are available for a variety of ICT roles such as 
-                    </p>
                     
-                    <div class="row">
-                        <div class="col">
+                </div>
+                <div class="col">
+                	<h3>Types of available IT candidates</h3>
+                	<div class="row">
+                   		<div class="col">
                             <ul class="skill">
                              <li>Java Developers</li>
                              <li>C# Developers</li>
@@ -45,20 +64,14 @@
                             </ul>
                         </div>
                     </div>
-                        
+                    <div class="row">
+	               		<div class="col">
+	               			<h3>Questions</h3>
+	               			<p>Please feel free to email any further questions you may have to kparkings@gmail.com</p>
+	               		</div>
+               		 </div>
                 </div>
-                <div class="col">
-                    <h2>How it works</h2>
-                    <p>We provide access to suitable ICT candidates</p>
-                    <p>If you place the candidate you set up the contract direct with them. There are no chains </p>
-                    <p>You let us know how many hours the candidate has worked each month</p>
-                    <p>For freelance ICT candidates we send you an invoice each months for the hours worked.</p>
-                    <p>For permanent ICT candidates we send you a single invoice when you place the candidate.</p>
-                   	<p>100% free up until the point you have placed the candidate</p>
-                    <p>You are able to download the CVs via the website and contact the candidates directly</p>
-                    <h2>How to get started</h2>
-                    <p>Email: kparkings@gmail.com to receive a free user account.</p>
-                </div>
+                
             </div>
         </div>
     </div>
